// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`TWAMM Hook #claimEarnings gas 1`] = `
Object {
  "calldataByteLength": 260,
<<<<<<< HEAD
  "gasUsed": 451215,
=======
  "gasUsed": 212676,
>>>>>>> d6c2944ce0303605cec4531f5eecce37d0c78ebb
}
`;

exports[`TWAMM Hook #executeTWAMMOrders when both order pools are selling gas crossing 1 initialized tick 1`] = `
Object {
  "calldataByteLength": 164,
  "gasUsed": 529008,
}
`;

exports[`TWAMM Hook #executeTWAMMOrders when both order pools are selling gas crossing 2 initialized ticks 1`] = `
Object {
  "calldataByteLength": 164,
  "gasUsed": 639044,
}
`;

exports[`TWAMM Hook #executeTWAMMOrders when both order pools are selling gas with no initialized ticks 1`] = `
Object {
  "calldataByteLength": 164,
  "gasUsed": 430848,
}
`;

exports[`TWAMM Hook #executeTWAMMOrders when only one pool is selling gas crossing 1 initialized tick 1`] = `
Object {
  "calldataByteLength": 164,
  "gasUsed": 343368,
}
`;

exports[`TWAMM Hook #executeTWAMMOrders when only one pool is selling gas crossing 2 initialized ticks 1`] = `
Object {
  "calldataByteLength": 164,
  "gasUsed": 366226,
}
`;

exports[`TWAMM Hook #executeTWAMMOrders when only one pool is selling gas crossing no initialized tick 1`] = `
Object {
  "calldataByteLength": 164,
  "gasUsed": 318225,
}
`;

exports[`TWAMM Hook #modifyLongTermOrder gas 1`] = `
Object {
  "calldataByteLength": 292,
  "gasUsed": 250187,
}
`;

exports[`TWAMM Hook #submitLongTermOrder gas 1`] = `
Object {
  "calldataByteLength": 292,
  "gasUsed": 164189,
}
`;
